added music and fixed the break point

--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
   </head>
   <body>
     <canvas id="myCanvas"></canvas>
+    <audio controls id="audioPlayer">
+      Your browser does not support the audio element.
+    </audio>
   </body>
 </html>
