implemented DFS and BFS animations

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./entity.js"></script>
     <script src="./utils.js"></script>
     <script src="./animations/animation1.js"></script>
+    <script src="./animations/animation2.js"></script>
 
     <title>Canvas Example</title>
     <style>
@@ -28,8 +29,5 @@
   </head>
   <body>
     <canvas id="myCanvas"></canvas>
-    <audio controls id="audioPlayer">
-      Your browser does not support the audio element.
-    </audio>
   </body>
 </html>
